--- a/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
+++ b/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
@@ -1,5 +1,7 @@
 @import "../valo/valo.scss";
 
+//@import "addons.scss";
+
 $gray: #d1d1cf;
 $green: #40b527;
 $darkgreen: darken($green, 30%);
@@ -10,27 +12,75 @@ $darkgreen: darken($green, 30%);
 	// Include valo theme styles in your theme
 	@include valo;
 
-	// You can style your demo app right here
-	.demoContentLayout {
-		background-color: $gray;
-		background-image: url(images/radial-gradient.png);
-		background-size: 90%;
-		background-position: center center;
-		background-repeat: no-repeat;
+	//@include addons;
+
+	//// You can style your demo app right here
+	//.demoContentLayout {
+	//	background-color: $gray;
+	//	background-image: url(images/radial-gradient.png);
+	//	background-size: 90%;
+	//	background-position: center center;
+	//	background-repeat: no-repeat;
+	//}
+    //
+	//// You can also customize your component for the demo
+	//// app, but remember that these styles are not part of
+	//// the component. To include built-in CSS for your component,
+	//// edit client/styles.css under java sources
+	//div.treegrid {
+	//	color: $green;
+	//	font-size: 50pt;
+	//	font-weight: bold;
+	//	text-shadow: 0px 3px 0px $darkgreen,
+     //        0px 14px 10px rgba(0,0,0,0.15),
+     //        0px 24px 2px rgba(0,0,0,0.1),
+     //        0px 34px 30px rgba(0,0,0,0.1);
+     //   text-align: center;
+	//}
+
+	$tree-spacer-width: 10px;
+	$tree-spacer-padding: 10px;
+	$indent: $tree-spacer-width + $tree-spacer-padding;
+
+	.v-tree-grid-expand-button {
+		display: inline-block;
+		width: 10px;
+		padding-right: 10px;
+
+		&::before {
+			display: inline-block;
+			padding-right: 4px;
+			font-family: FontAwesome;
+		}
+
+		&.expanded {
+			&::before {
+				content: '\f0d7';
+			}
+		}
+
+		&.collapsed {
+			&::before {
+				content: '\f0da';
+			}
+		}
 	}
-	
-	// You can also customize your component for the demo
-	// app, but remember that these styles are not part of
-	// the component. To include built-in CSS for your component,
-	// edit client/styles.css under java sources
-	div.treegrid {
-		color: $green;
-		font-size: 50pt;
-		font-weight: bold;
-		text-shadow: 0px 3px 0px $darkgreen,
-             0px 14px 10px rgba(0,0,0,0.15),
-             0px 24px 2px rgba(0,0,0,0.1),
-             0px 34px 30px rgba(0,0,0,0.1);
-        text-align: center;
+
+	.v-tree-grid-node {
+		&.depth-0 {
+			padding-left: $indent * 0;
+		}
+
+		&.depth-1 {
+			padding-left: $indent * 1;
+		}
+
+		&.depth-2 {
+			padding-left: $indent * 2;
+		}
+
+		.v-tree-grid-cell-content {
+			display: inline-block;
+		}
 	}
 }
