Renamed expanded -> collapsed and expand-button -> expander

--- a/treegrid-addon/src/main/resources/org/vaadin/treegrid/public/treegrid/styles.scss
+++ b/treegrid-addon/src/main/resources/org/vaadin/treegrid/public/treegrid/styles.scss
@@ -10,7 +10,7 @@ $tree-spacer-width: 10px;
 $tree-spacer-padding: 10px;
 $indent: $tree-spacer-width + $tree-spacer-padding;
 
-.v-tree-grid-expand-button {
+.v-tree-grid-expander {
   display: inline-block;
   width: 10px;
   padding-right: 10px;
