--- a/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
+++ b/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
@@ -42,6 +42,8 @@ $darkgreen: darken($green, 30%);
 	$tree-spacer-padding: 10px;
 	$indent: $tree-spacer-width + $tree-spacer-padding;
 
+	$class-depth: depth !default;
+
 	.v-tree-grid-expander {
 		display: inline-block;
 		width: 10px;
@@ -67,20 +69,10 @@ $darkgreen: darken($green, 30%);
 	}
 
 	.v-tree-grid-node {
-		&.depth-0 {
-			padding-left: $indent * 0;
-		}
-
-		&.depth-1 {
-			padding-left: $indent * 1;
-		}
-
-		&.depth-2 {
-			padding-left: $indent * 2;
-		}
-
-		&.depth-3 {
-			padding-left: $indent * 3;
+		@for $i from 0 through 15 {
+			&.#{$class-depth}-#{$i} {
+				padding-left: $indent * $i;
+			}
 		}
 
 		.v-tree-grid-cell-content {
