--- a/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
+++ b/treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
@@ -1,10 +1,6 @@
 @import "../valo/valo.scss";
 
-//@import "addons.scss";
-
-$gray: #d1d1cf;
-$green: #40b527;
-$darkgreen: darken($green, 30%);
+@import "addons.scss";
 
 // Prefix all selectors in your theme with .demo
 .demo {
@@ -12,71 +8,5 @@ $darkgreen: darken($green, 30%);
 	// Include valo theme styles in your theme
 	@include valo;
 
-	//@include addons;
-
-	//// You can style your demo app right here
-	//.demoContentLayout {
-	//	background-color: $gray;
-	//	background-image: url(images/radial-gradient.png);
-	//	background-size: 90%;
-	//	background-position: center center;
-	//	background-repeat: no-repeat;
-	//}
-    //
-	//// You can also customize your component for the demo
-	//// app, but remember that these styles are not part of
-	//// the component. To include built-in CSS for your component,
-	//// edit client/styles.css under java sources
-	//div.treegrid {
-	//	color: $green;
-	//	font-size: 50pt;
-	//	font-weight: bold;
-	//	text-shadow: 0px 3px 0px $darkgreen,
-     //        0px 14px 10px rgba(0,0,0,0.15),
-     //        0px 24px 2px rgba(0,0,0,0.1),
-     //        0px 34px 30px rgba(0,0,0,0.1);
-     //   text-align: center;
-	//}
-
-	$tree-spacer-width: 10px;
-	$tree-spacer-padding: 10px;
-	$indent: $tree-spacer-width + $tree-spacer-padding;
-
-	$class-depth: depth !default;
-
-	.v-tree-grid-expander {
-		display: inline-block;
-		width: 10px;
-		padding-right: 10px;
-
-		&::before {
-			display: inline-block;
-			padding-right: 4px;
-			font-family: FontAwesome;
-		}
-
-		&.expanded {
-			&::before {
-				content: '\f0d7';
-			}
-		}
-
-		&.collapsed {
-			&::before {
-				content: '\f0da';
-			}
-		}
-	}
-
-	.v-tree-grid-node {
-		@for $i from 0 through 15 {
-			&.#{$class-depth}-#{$i} {
-				padding-left: $indent * $i;
-			}
-		}
-
-		.v-tree-grid-cell-content {
-			display: inline-block;
-		}
-	}
+	@include addons;
 }
